SERVER-3909: Blank lines don't work in the mongo shell starting with 2.0