shell/dbshell.cpp
@@ -497,7 +497,7 @@ string finishCode( string code ) {
             return "";
         if ( ! line )
             return "";
-        if ( code.find("\n\n") != string::npos ) // cancel multiline if two blank lines are entered
+        if ( code.find("\n\n\n") != string::npos ) // cancel multiline if two blank lines are entered
             return ";";
 
         while (startsWith(line, "... "))
